CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)
SET(CMAKE_CPP_FLAGS_RELEASE "-Wall -O2")
SET(CMAKE_CPP_FLAGS_DEBUG "-g")
SET(CMAKE_BUILD_TYPE Release)

PROJECT(KonaVector CXX)
SET(serial "1.0.0")
SET(soserial "1")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")
ADD_LIBRARY(konavector STATIC KonaVector.cpp KonaVector2D.cpp KonaRect.cpp KonaCircle.cpp)
SET_TARGET_PROPERTIES(konavector PROPERTIES VERSION ${serial} SOVERSION ${soserial})

ADD_EXECUTABLE(KonaVectorTest main.cpp)
TARGET_LINK_LIBRARIES(KonaVectorTest LINK_PUBLIC konavector)
